# postmodern-python

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  copier.yml  pyproject.toml  pyproject.toml.jinja  test_import.py  test_import.py.jinja  {{ 'Dockerfile' if include_dockerfile }}.jinja  {{ 'rename.sh' if project_name == 'postmodern-python' }}.jinja
.github/workflows/: pr.yml  release.yml  render-template.yml  test-template.yml
postmodern/: __init__.py  __main__.py  adder.py  hello.py
template/: CONTRIBUTING.md  README.md  {{ 'Dockerfile' if include_dockerfile }}.jinja
template/.github/workflows/: pr.yml
template/{{ module_name }}/: __main__.py.jinja  adder.py  hello.py.jinja  server.py
{{ module_name }}/: cli.py
